version/0.23/_sources/api/solver/_autosummary/settings/direct_irradiation.rst.txt
:orphan:

.. _direct_irradiation:

direct_irradiation
==================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.direct_irradiation.direct_irradiation
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`rename <rename>`                                              Rename the object.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`variables_child <variables_child>`


.. rubric:: Included in:

==============================   ===================================================

Parent                                                                       Summary

==============================   ===================================================
:ref:`radiation <radiation_1>`       Radiation settings for this boundary-condition.

:ref:`radiation <radiation_2>`       Radiation settings for this boundary-condition.

:ref:`radiation <radiation_3>`       Radiation settings for this boundary-condition.

:ref:`radiation <radiation_4>`       Radiation settings for this boundary-condition.

:ref:`radiation <radiation_5>`       Radiation settings for this boundary-condition.

:ref:`radiation <radiation_6>`       Radiation settings for this boundary-condition.

==============================   ===================================================

