version/0.27/_sources/api/solver/_autosummary/settings/direct_irradiation.rst.txt
:orphan:

.. _direct_irradiation:

direct_irradiation
==================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.direct_irradiation
    :show-inheritance:

.. rubric:: Methods

========================================   =========================================

Method                                                                       Summary

========================================   =========================================
:ref:`create <create_1>`                                 Create an instance of this.

:ref:`delete <delete_1>`                                    Delete selected objects.

:ref:`rename <rename>`                                            Rename the object.

:ref:`list <list>`                                    List the names of the objects.

:ref:`list_properties <list_properties>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                        Create a copy of the object.

========================================   =========================================

.. rubric:: Named object type

:ref:`direct_irradiation_child <direct_irradiation_child>`


.. rubric:: Included in:

================================================================   ===========================================================

Parent                                                                                                                 Summary

================================================================   ===========================================================
:ref:`radiation_1 <radiation_1>`                                               Radiation settings for this boundary-condition.

:ref:`radiation_2 <radiation_2>`                                               Radiation settings for this boundary-condition.

:ref:`radiation_3 <radiation_3>`                                       Allows to change radiation model variables or settings.

:ref:`radiation_4 <radiation_4>`                                               Radiation settings for this boundary-condition.

:ref:`radiation_5 <radiation_5>`                                               Radiation settings for this boundary-condition.

:ref:`radiation_6 <radiation_6>`                                               Radiation settings for this boundary-condition.

:ref:`direct_irradiation_settings <direct_irradiation_settings>`                                  Direct irradiation settings.

================================================================   ===========================================================

